# UrbanScope

./: .env.example  .gitignore  AI_MODELS_ANALYSIS.md  AI_MODELS_AND_VISUALIZATION_ANALYSIS.md  BACKEND_SETUP.md  CHATBOT_INTEGRATION_GUIDE.md  CLEANUP_GUIDE.md  COMPLETE_DEPLOYMENT_GUIDE.md  DEPLOY_BACKEND_TO_RENDER.md  GLOBAL_CITY_SEARCH_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NASA_INTEGRATION_GUIDE.md  PRESENTATION_SCRIPT.txt  PROFESSIONAL_UI_REDESIGN.md  PROJECT_RESTRUCTURE_SUMMARY.md  QUICK_DEPLOY_STEPS.md  QUICK_REFERENCE.md  QUICK_VERCEL_FIX.md  README.md  REAL_NASA_DATA_INTEGRATION.md  REMOVE_EMOJIS_SUMMARY.md  RENDER_SETTINGS_CARD.md  SIMPLE_VIDEO_SCRIPT.txt  START_GUIDE.md  VERCEL_DEPLOYMENT_FIX.md  VERCEL_SETTINGS_CARD.md  VIDEO_SCRIPT.txt  contributing.md  index.html  move-videos-to-public.bat  package.json
aimodels/urban-heat-risk-index-main/urban-heat-risk-index-main/spatial-data-science/scripts/: Heat Risk Index.HRITool.pyt.xml  Heat Risk Index.pyt  Heat Risk Index.pyt.xml  README.md  heat_risk_index.py  pyproject.toml  test_heat_risk_index.py
aimodels/urban-heat-risk-index-main/urban-heat-risk-index-main/spatial-data-science/scripts/heatri/: __init__.py  heat_risk_index.py
aimodels/urban-heat-risk-index-main/urban-heat-risk-index-main/spatial-data-science/scripts/heatri/data/: hri-renderer.json
backend/: .gitignore  README.md  app.py  requirements.txt
backend/models/: green_space.py  green_space_enhanced.py  healthcare.py  healthcare_enhanced.py  heat_risk.py  heat_risk_enhanced.py  prediction.py
src/: App.css  App.jsx  index.css  main.jsx
(+79 files in other folders)
